chore(open graph): optimise link reviews

--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kings Cross Hack Lab</title>
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://kingscrosshacklab.com" />
+        <meta
+            property="og:title"
+            content="Kings Cross Hack Lab - Ship or Get Shipped"
+        />
+        <meta
+            property="og:description"
+            content="Weekly live-building sessions where founders, developers, designers, marketers, and product people ship together. Every Wednesday. No excuses."
+        />
+        <meta
+            property="og:image"
+            content="https://kingscrosshacklab.com/og-image.png"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://kingscrosshacklab.com" />
+        <meta
+            property="twitter:title"
+            content="Kings Cross Hack Lab - Ship or Get Shipped"
+        />
+        <meta
+            property="twitter:description"
+            content="Weekly live-building sessions where founders, developers, designers, marketers, and product people ship together. Every Wednesday. No excuses."
+        />
+        <meta
+            property="twitter:image"
+            content="https://kingscrosshacklab.com/og-image.png"
+        />
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+
         <style>
             @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&family=Inter:wght@300;400;500;600;700&display=swap");
 
