chore(open graph): ensure all image assets are present

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://kingscrosshacklab.com" />
+        <meta property="og:url" content="https://kxhacklab.com" />
         <meta
             property="og:title"
             content="Kings Cross Hack Lab - Ship or Get Shipped"
@@ -18,12 +18,12 @@
         />
         <meta
             property="og:image"
-            content="https://kingscrosshacklab.com/og-image.png"
+            content="https://kxhacklab.com/og-image.png"
         />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://kingscrosshacklab.com" />
+        <meta property="twitter:url" content="https://kxhacklab.com" />
         <meta
             property="twitter:title"
             content="Kings Cross Hack Lab - Ship or Get Shipped"
@@ -34,7 +34,7 @@
         />
         <meta
             property="twitter:image"
-            content="https://kingscrosshacklab.com/og-image.png"
+            content="https://kxhacklab.com/og-image.png"
         />
 
         <!-- Favicon -->
