chore: stylign changes

--- a/index.html
+++ b/index.html
@@ -574,12 +574,6 @@
         <header>
             <nav class="container">
                 <a href="#" class="logo">KCHL</a>
-                <ul class="nav-links">
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#stats">Stats</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
             </nav>
         </header>
 
@@ -706,11 +700,12 @@
                         </div>
 
                         <div class="feature-card">
-                            <div class="feature-icon">🎯</div>
-                            <h3>Launch Pipeline</h3>
+                            <div class="feature-icon">📊</div>
+                            <h3>Prediction Market</h3>
                             <p>
-                                From idea to product-market fit. Structured path
-                                combining tech, design, and growth expertise.
+                                Play-money prediction market where users trade
+                                on startup milestones. Public odds track
+                                progress and reward accurate forecasters.
                             </p>
                         </div>
                     </div>
